# autoglossapi

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
controller/: README.md  __init__.py  advance_stage.py  human_decision.py  launch_codex_exec_harness.py  launch_runtime_task.py  progress_scoring.py  render_human_decision.py  review_stage_outcome.py  reviewer_memory.py  route_next_action.py  run_lineage_loop.py  stage_definitions.py  validate_stage_report.py
docs/: agentic_pipeline.md  architecture_plan.md  aws_runtime.md  download_telemetry.md  oa_ocr_execution_plan_20260329.md  ocr_worker_sizing.md  operator_runbook.md  repo_map.md  runtime_execution_spec.md  runtime_stack_fit.md  secret_policy.md
lineages/: README.md
prompts/: README.md  adapter_spec.md  build_scraper.md  bulk_run_scraper.md  discover.md  feasibility.md  sample_validation.md  smoke_test_scraper.md
runtime/: README.md  __init__.py  investigation.py  render_runtime_task.py
schemas/: human_decision.schema.json  improvement_plan.schema.json  retry_decision.schema.json  runtime_task.schema.json  snapshot_manifest.schema.json  stage_report.schema.json
scrapers/: __init__.py
scripts/: build_collection_manifests.py  generate_tracking_backlogs.py  search_review_memory.py
tests/: test_deepseek_runtime_fit.py  test_download_telemetry.py  test_harness_dry_run.py  test_human_decision.py  test_ocr_review_bundle.py  test_openarchives_benchmark_sample.py  test_progress_scoring.py  test_reference_page_selection.py  test_reviewer_memory.py  test_route_next_action.py  (+9 more)
tracking/: README.md
(+51 files in other folders)
